[gd_scene load_steps=3 format=3 uid="uid://ck5vt3an2jvqm"]

[ext_resource type="Script" path="res://UI/start.gd" id="1_hleet"]
[ext_resource type="PackedScene" uid="uid://b0wsu6auu13gs" path="res://UI/options_menu.tscn" id="2_upcyg"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hleet")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = 76.0
offset_right = 71.5
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_upcyg")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
